extensions/tax/avalara/objects/HTTP_Service__mdt/HTTP_Service__mdt.object-meta.xml
<CustomObject>
    <label>HTTP Service</label>
    <pluralLabel>HTTP Services</pluralLabel>
</CustomObject>