extensions/tax/avalara/objects/HTTP_Service__mdt/fields/Auth_Codes__c.field-meta.xml
<CustomField>
    <fullName>Auth_Codes__c</fullName>
    <inlineHelpText>If any of these code(s) are returned by a service, needs to make a auth call to get a new token and then retry making the call.</inlineHelpText>
    <label>Auth Codes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>