extensions/tax/avalara/objects/HTTP_Service__mdt/fields/Error_Codes__c.field-meta.xml
<CustomField>
    <fullName>Error_Codes__c</fullName>
    <label>Error Codes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>