extensions/tax/avalara/objects/HTTP_Service__mdt/fields/Mocked_Response__c.field-meta.xml
<CustomField>
    <fullName>Mocked_Response__c</fullName>
    <label>Mocked Response</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>