extensions/tax/avalara/objects/HTTP_Service__mdt/fields/Success_Codes__c.field-meta.xml
<CustomField>
    <fullName>Success_Codes__c</fullName>
    <label>Success Codes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>